# oxwm

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: rust.yml
src/: action.rs  atom.rs  client.rs  config.rs  lib.rs  main.rs  util.rs
src/ext/: conn.rs  mod.rs
