[package]
name = "oxwm"
version = "0.1.0"
authors = ["Nicholas Coltharp <coltharp@pdx.edu>", "James Nichols <jtn4@pdx.edu>"]
edition = "2018"

[lib]
name = "oxwm"

[dependencies]
dirs = "3"
essrpc = { version = "0.3.0", features = ["bincode_transport"] }
log = "0.4.14"
serde = { version = "1", features = ["derive"] }
simple_logger = "1"
structopt = "0.3.21"
thiserror = "1"
toml = "0.5.8"
x11rb = "0.8.1"
